--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,9 +1,11 @@
-<a href="{{ .Permalink }}">
-    <div>{{ .Title }}</div>
+<article id="summary">
+    <div><h3 class="summary-info"><a href="{{ .Permalink }}">{{ .Title }}</a></h3></div>
     <div>{{ .Summary }}</div>
     <div>
-      <span>{{ .ReadingTime }} Minutes</span>
-      <span>{{ .Date.Format "Jan 2, 2006" }}</span>
-      <span>{{ .WordCount }} Words</span>
+      <h6 class="summary-info">
+        <span>{{ .ReadingTime }} Minutes</span>
+        <span>{{ .Date.Format "Jan 2, 2006" }}</span>
+        <span>{{ .WordCount }} Words</span>
+      </h6>
     </div>
-  </a>  
+</article>
