added pagefind + appropriate styling, added link buttons on frontpage

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
       <span>{{ .WordCount }} Words</span>
     </h4>
 
-    <article>
+    <article data-pagefind-body>
       {{ .Content }}
     </article>
   </main>
