--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -12,5 +12,8 @@
       <li><a role="button" href="/posts">
         Posts
       </a></li>
+      <li><a role="button" href="/search">
+        Search
+      </a></li>
     </ul>
 </nav>
