--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
 <main>
-  <div>
+  <div class="container">
     <h1>404 Page Not Found</h1>
     <h2><a href="/">Go Home</a></h2>
   </div>
