--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,12 +3,10 @@
     <header>
       <h1 id="site-title">{{ .Title }}</h1>
     </header>
-    <div class="homepage-content-container">
-      <div class="grid">
-        <a class="homepage-link" href="/">Link 1</a>
-        <a class="homepage-link" href="/">Link 2</a>
-        <a class="homepage-link" href="/">Link 3</a>
-      </div>
+    <div class="grid">
+      <a class="homepage-link" href="/"><b>Link 1</b></a>
+      <a class="homepage-link" href="/"><b>Link 2</b></a>
+      <a class="homepage-link" href="/"><b>Link 3</b></a>
     </div>
     <br>
     <div class="homepage-content-container">
