--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
       <li>
-        <strong>{{ $.Site.Title }}</strong>
+        <strong id="nav-title">{{ $.Site.Title }}</strong>
       </li>
     </ul>
   
