add comments on CSS for easy readability

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,4 +1,4 @@
-<article id="summary">
+<article class="summary">
     <div><h3 class="summary-info"><a href="{{ .Permalink }}">{{ .Title }}</a></h3></div>
     <div>{{ .Summary }}</div>
     <div>
