migrate to Pico v2.0, but there is still a big bug with the search bar, and not all styles may still be compliant

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="blog,hugo,picocss,pagefind">
     <meta property="og:site_name" content="{{ $.Site.Title }}">
     <meta property="og:title" content="{{ $.Site.Title }}">
+    <meta name="color-scheme" content="light dark"/>
 
     {{ if .IsPage }}
 		    <title>{{ .Title }} | {{ $.Site.Title }}</title>
